Fixing bg on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -484,8 +484,9 @@ h3 {
 
   /*load bg for mobile*/
   .snt-home-body-bg {
-    background: url('../img/home-bg-mobile.jpg') no-repeat center center fixed; 
+    background: url('../img/home-bg-mobile.jpg');
   }
+
   /*home page remove arrow down*/
   .snt-arrow-down {
     display: none;
@@ -508,6 +509,10 @@ h3 {
 
   .snt-menu-icon {
     top: 0.5rem;
+  }
+
+  .snt-home-body-bg {
+    background: url('../img/home-bg-mobile.jpg'); 
   }
 }
 
